--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
-    <div></div>
+    <div id="result"></div>
     <div id="end"></div>
 </body>
 </html>
